--- a/Backend/Infrastructure/Infrastructure.csproj
+++ b/Backend/Infrastructure/Infrastructure.csproj
@@ -1,13 +1,15 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
   <ItemGroup>
-    <ProjectReference Include="..\Core\Core.csproj" />
+    <ProjectReference Include="..\Core\Core.csproj"/>
   </ItemGroup>
-
+  <ItemGroup>
+    <PackageReference Include="System.Text.Json" Version="7.0.3"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.0"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.0"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="7.0.0"/>
+  </ItemGroup>
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
   </PropertyGroup>
-
 </Project>
